# pyautoTest

./: pyproject.toml
test_report/2024_07_15_15_24_28/: junit-xml.xml  report.html
