[tool.poetry]
name = "pyautotest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "6.2.4"
pytest-html = "3.1.1"
pytest-rerunfailures = "9.1.1"
pytest-base-url = "1.4.2"
click = "7.1.2"
poium = "1.1.5"
webdriver-manager = "3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
